tests/snapshots/mvp__empty_workspace_operation_view.snap
---
source: tests/mvp.rs
expression: "normalize_inspection_output(&cnp_stdout(&repo,\n&[\"change\", \"operations\", \"Empty ops\"]))"
---
Workspace operations
Change: Empty ops
Handle: change/empty-ops
Status: active
Operations: 0

No workspace operations recorded for this change.
Record one with `cnp file add|update|remove|rename ...`.
