tests/snapshots/mvp__fresh_change_list_view.snap
---
source: tests/mvp.rs
expression: "normalize_inspection_output(&cnp_stdout(&repo, &[\"change\", \"list\"]))"
---
Changes
  No changes yet.
  Start one with `cnp change start <name>`.
