tests/snapshots/mvp__healthy_doctor_view.snap
---
source: tests/mvp.rs
expression: "normalize_inspection_output(&cnp_stdout(&repo, &[\"doctor\"]))"
---
Canopy doctor
Checks: local JSON state, change lifecycle, virtual paths, private tree replay
Status: healthy
Errors: 0
Warnings: 1
Warning: MVP secret privacy is projection filtering over plaintext local JSON, not encryption
